examples/scripts/resources/keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  parentRefs:
    - name: http
      namespace: kagenti-system
  hostnames:
    - "keycloak.localtest.me"
    - "www.keycloak.localtest.me"
  rules:
    - backendRefs:
        - name: keycloak
          port: 8080
